@@ -135,7 +135,9 @@ START_TIME_PROFILE;
 	unit->sonarRadius=ud->sonarRadius/(SQUARE_SIZE*8);
 	unit->jammerRadius=ud->jammerRadius/(SQUARE_SIZE*8);
 	unit->sonarJamRadius=ud->sonarJamRadius/(SQUARE_SIZE*8);
-	unit->hasRadarCapacity=unit->radarRadius || unit->sonarRadius || unit->jammerRadius || unit->sonarJamRadius;
+	unit->seismicRadius = ud->seismicRadius /(SQUARE_SIZE*8);
+	unit->seismicSignature = ud->seismicSignature /(SQUARE_SIZE*8);
+	unit->hasRadarCapacity=unit->radarRadius || unit->sonarRadius || unit->jammerRadius || unit->sonarJamRadius || unit->seismicRadius;
 	unit->stealth=ud->stealth;
 	unit->category=ud->category;
 	unit->armorType=ud->armorType;
